--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
-<div>
+<div class="beer-img">
+  <img src="/images/beer.png">
+</div>
 
+<div class="buttons">
+  <a href="/beers" class="link-btn">Check the beers!</a>
+  <a href="/random-beer" class="link-btn">Check a Random Beer!</a>
 </div>
